--- a/Front-End-App/package.json
+++ b/Front-End-App/package.json
@@ -1,38 +1,48 @@
 {
-  "name": "front-end-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "front-end-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@chakra-ui/core": "^1.0.0-next.6",
+		"@chakra-ui/icons": "^1.0.2",
+		"@chakra-ui/theme": "^1.0.0-next.6",
+		"@chakra-ui/theme-tools": "^1.0.0-next.6",
+		"@testing-library/jest-dom": "^5.9.0",
+		"@testing-library/react": "^10.2.1",
+		"@testing-library/user-event": "^12.0.2",
+		"@types/jest": "^25.0.0",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.0",
+		"@types/react-dom": "^16.9.0",
+		"framer-motion": "^2.9.4",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-icons": "^3.0.0",
+		"react-scripts": "4.0.0",
+		"web-vitals": "^0.2.2"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
