--- a/Front-End-App/package.json
+++ b/Front-End-App/package.json
@@ -20,7 +20,8 @@
 		"react-icons": "^3.11.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.0",
-		"web-vitals": "^0.2.2"
+		"web-vitals": "^0.2.2",
+		"yarn": "^1.22.10"
 	},
 	"scripts": {
 		"start": "react-scripts start",
